Fix style on iPhone

--- a/front/app/styles/background.css
+++ b/front/app/styles/background.css
@@ -98,7 +98,7 @@ div.post_card
 	box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.4);
 	border: 2px solid rgba(0, 0, 0, 0.8);
 	display: none;
-	font-size: 13px;
+	font-size: 12px;
 	height: 10%;
 	margin: 3px;
 	position: absolute;
